# substrate-parachain-template

./: para-2000-genesis  para-2000-wasm  parachain-raw.json  rococo-local-parachain-2000-raw.json  rococo-local-parachain-plain.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/nft/: Cargo.toml
pallets/nft/src/: benchmarking.rs  functions.rs  impl_nonfungibles.rs  lib.rs  migration.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/rmrk-core/: Cargo.toml
pallets/rmrk-core/src/: functions.rs  lib.rs  mock.rs  tests.rs  types.rs
res/: realis-testnet-plain.json  realis-testnet-raw.json  rococo-local-testnet-plain.json  rococo-local-testnet-raw.json
res/relay-chain/: realis-testnet-raw.json  rococo-local-testnet-raw.json
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
scripts/: purge_chain.sh  run_parachain_alice.sh  run_parachain_bob.sh
